--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "leo-macos-menu-bar",
-  "productName": "leo-macos-menu-bar",
-  "version": "1.0.0",
-  "description": "My Electron application description",
+  "name": "leo-bar",
+  "productName": "leo-bar",
+  "version": "0.1.0",
+  "description": "Menu bar client for LEO.org dictionaries.",
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "publish": "electron-forge publish"
   },
   "repository": {
-    "url": "https://github.com/vvvar/leo-menu-bar.git"
+    "type": "git",
+    "url": "https://github.com/vvvar/leo-bar.git"
   },
-  "keywords": [],
-  "author": "vov3sh",
-  "license": "MIT",
+  "keywords": [
+    "electron",
+    "macos",
+    "menubar",
+    "language-dictionary"
+  ],
+  "author": "vvvar",
+  "license": "GPL-3.0",
   "dependencies": {
     "dotenv": "^16.0.3",
     "electron-context-menu": "^3.6.1",
@@ -27,9 +32,11 @@
   "devDependencies": {
     "@electron-forge/cli": "^6.0.4",
     "@electron-forge/maker-deb": "^6.0.4",
+    "@electron-forge/maker-dmg": "^6.0.4",
     "@electron-forge/maker-rpm": "^6.0.4",
     "@electron-forge/maker-squirrel": "^6.0.4",
     "@electron-forge/maker-zip": "^6.0.4",
-    "electron": "22.0.0"
+    "electron": "22.0.0",
+    "prettier": "2.8.1"
   }
 }
