--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@electron-forge/maker-rpm": "^6.0.4",
     "@electron-forge/maker-squirrel": "^6.0.4",
     "@electron-forge/maker-zip": "^6.0.4",
+    "@electron-forge/publisher-github": "^6.0.4",
     "electron": "22.0.0",
     "prettier": "2.8.1"
   }
