--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
       - name: install dependencies
         run: npm install
       - name: publish
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: npm run publish
 
   release_on_mac:
@@ -60,6 +62,7 @@ jobs:
           MACOS_APPLE_ID: ${{ secrets.MACOS_APPLE_ID }}
           MACOS_APPLE_PASSWORD: ${{ secrets.MACOS_APPLE_PASSWORD }}
           MACOS_APPLE_TEAM_ID: ${{ secrets.MACOS_APPLE_TEAM_ID }}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: npm run publish
 
   release_on_win:
@@ -72,4 +75,6 @@ jobs:
       - name: install dependencies
         run: npm install
       - name: publish
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: npm run publish
