--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
       - main
 
 jobs:
-  build_on_linux:
+  release_on_linux:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -14,15 +14,18 @@ jobs:
           node-version: 14
       - name: install dependencies
         run: npm install
-      - name: build
-        run: npm run package
+      - name: publish
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_ENV: production
+        run: npm run publish
       - name: upload artifacts
         uses: actions/upload-artifact@v3
         with:
           name: linux
           path: ${{github.workspace}}/out/
 
-  build_on_mac:
+  release_on_mac:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
@@ -31,15 +34,50 @@ jobs:
           node-version: 14
       - name: install dependencies
         run: npm install
-      - name: build
-        run: npm run package
+      - name: install the Apple certificate and provisioning profile
+        env:
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.MACOS_BUILD_CERTIFICATE_BASE64 }}
+          P12_PASSWORD: ${{ secrets.MACOS_P12_PASSWORD }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.MACOS_BUILD_PROVISION_PROFILE_BASE64 }}
+          KEYCHAIN_PASSWORD: ${{ secrets.MACOS_KEYCHAIN_PASSWORD }}
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+
+          # import certificate and provisioning profile from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
+
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+      - name: publish
+        env:
+          MACOS_APPLE_IDENTITY: ${{ secrets.MACOS_APPLE_IDENTITY }}
+          MACOS_APPLE_ID: ${{ secrets.MACOS_APPLE_ID }}
+          MACOS_APPLE_PASSWORD: ${{ secrets.MACOS_APPLE_PASSWORD }}
+          MACOS_APPLE_TEAM_ID: ${{ secrets.MACOS_APPLE_TEAM_ID }}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_ENV: production
+        run: npm run publish
       - name: upload artifacts
         uses: actions/upload-artifact@v3
         with:
           name: macos
           path: ${{github.workspace}}/out/
 
-  build_on_win:
+  release_on_win:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
@@ -48,8 +86,11 @@ jobs:
           node-version: 14
       - name: install dependencies
         run: npm install
-      - name: build
-        run: npm run package
+      - name: publish
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_ENV: production
+        run: npm run publish
       - name: upload artifacts
         uses: actions/upload-artifact@v3
         with:
