--- a/.github/workflows/publish_release_draft.yml
+++ b/.github/workflows/publish_release_draft.yml
@@ -1,40 +1,46 @@
-name: Main
+name: Publish Release Draft
+run-name: Release draft for commit ${{ github.sha }}
 on:
   push:
     branches:
       - main
 
+env:
+  BUILD_ID: '${{ github.run_id }}.${{ github.run_number }}.${{ github.run_attempt }}'
+
 jobs:
-  publish_linux:
-    runs-on: ubuntu-latest
+  ubuntu:
+    name: Ubuntu
+    runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@master
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version-file: 'package.json'
       - name: Install Dependencies
-        run: npm install
-      - name: Make, Package & Publish
+        run: npm install --legacy-peer-deps
+      - name: Build & Publish
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           NODE_ENV: production
         run: npm run publish
-      - name: Collect & Upload Artifacts
+      - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: Linux.zip
+          name: Linux-${{ env.BUILD_ID }}.zip
           path: ${{github.workspace}}/out/
 
-  publish_macos:
-    runs-on: macos-latest
+  macos:
+    name: macOS
+    runs-on: macos-12
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@master
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 14
-      - name: install dependencies
-        run: npm install
-      - name: install the Apple certificate and provisioning profile
+          node-version-file: 'package.json'
+      - name: Install Dependencies
+        run: npm install --legacy-peer-deps
+      - name: Install the Apple certificate and provisioning profile
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.MACOS_BUILD_CERTIFICATE_BASE64 }}
           P12_PASSWORD: ${{ secrets.MACOS_P12_PASSWORD }}
@@ -62,7 +68,7 @@ jobs:
           # apply provisioning profile
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-      - name: Make, Package & Publish
+      - name: Build & Publish
         env:
           MACOS_APPLE_IDENTITY: ${{ secrets.MACOS_APPLE_IDENTITY }}
           MACOS_APPLE_ID: ${{ secrets.MACOS_APPLE_ID }}
@@ -71,28 +77,29 @@ jobs:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           NODE_ENV: production
         run: npm run publish -- --arch arm64,x64
-      - name: Collect & Upload Artifacts
+      - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: MacOS.zip
+          name: MacOS-${{ env.BUILD_ID }}.zip
           path: ${{github.workspace}}/out/
 
-  publish_windows:
-    runs-on: windows-latest
+  windows:
+    name: Windows
+    runs-on: windows-2022
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@master
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 14
-      - name: install dependencies
-        run: npm install
-      - name: Make, Package & Publish
+          node-version-file: 'package.json'
+      - name: Install dependencies
+        run: npm install --legacy-peer-deps
+      - name: Build & Publish
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           NODE_ENV: production
         run: npm run publish
-      - name: Collect & Upload Artifacts
+      - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: Windows.zip
+          name: Windows-${{ env.BUILD_ID }}.zip
           path: ${{github.workspace}}/out/
