--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish"
   },
+  "engines": {
+    "node": "18.12.1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/vvvar/leo-bar.git"
