--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "leo-bar",
   "productName": "LeoBar",
+  "packagerConfig": {
+    "executableName": "LeoBar"
+  },
   "version": "0.1.0",
   "description": "Menu bar client for LEO.org dictionaries.",
   "main": "src/index.js",
