Explicitly set x64 for Linux architecture

--- a/.github/workflows/publish_release_draft.yml
+++ b/.github/workflows/publish_release_draft.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           NODE_ENV: production
-        run: npm run publish
+        run: npm run publish -- --arch x64
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
