--- a/.github/workflows/execute_merge_checks.yml
+++ b/.github/workflows/execute_merge_checks.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Dependencies
         run: npm install --legacy-peer-deps
       - name: Build
-        run: npm run package
+        run: npm run make
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -35,7 +35,7 @@ jobs:
       - name: Install Dependencies
         run: npm install --legacy-peer-deps
       - name: Build
-        run: npm run package -- --arch arm64,x64
+        run: npm run make -- --arch arm64,x64
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -53,7 +53,7 @@ jobs:
       - name: Install Dependencies
         run: npm install --legacy-peer-deps
       - name: Build
-        run: npm run package
+        run: npm run make
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
