--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "publish": "electron-forge publish"
   },
   "engines": {
-    "node": "18.12.1"
+    "node": "v18.11.0",
+    "npm": "8.3.1"
   },
   "repository": {
     "type": "git",
